AKS scripting/VIYA4/project/deploy/franceavv/sas-bases/overlays/network/istio/components/sas-text-categorization/resources.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-categorization
spec:
  host: sas-categorization
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /categorization/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-category-execution-provider
spec:
  host: sas-category-execution-provider
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /categoryExecutionProvider/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-category-taxonomy
spec:
  host: sas-category-taxonomy
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /categoryTaxonomy/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-text-categorization
    sas.com/admin: namespace
  name: sas-categorization
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /categorization
    - uri:
        prefix: /categorization/
    route:
    - destination:
        host: sas-categorization
    timeout: 300s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-text-categorization
    sas.com/admin: namespace
  name: sas-category-execution-provider
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /categoryExecutionProvider
    - uri:
        prefix: /categoryExecutionProvider/
    route:
    - destination:
        host: sas-category-execution-provider
    timeout: 300s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-text-categorization
    sas.com/admin: namespace
  name: sas-category-taxonomy
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /categoryTaxonomy
    - uri:
        prefix: /categoryTaxonomy/
    route:
    - destination:
        host: sas-category-taxonomy
    timeout: 300s
